--- a/Sivas/Content/customLand.css
+++ b/Sivas/Content/customLand.css
@@ -7,12 +7,13 @@
 .product {
     background-color: rgb(255, 250, 250);
     margin: 10px;
+    margin-left: 40px;
     float: left;
     height: 240px;
     width: 300px;
     -webkit-box-shadow: 2px 2px 4px 2px #2D2D2D;
     box-shadow: 2px 2px 4px 2px #2D2D2D;
-	border-radius: 10px;
+    border-radius: 10px;
 }
 
     .product:hover {
@@ -30,7 +31,7 @@
 }
 
 .product_DescriptionLand {
-    display: compact;
+    display: block;
     margin-top: 5px;
     margin-left: 20px;
 }
@@ -66,7 +67,7 @@
     }
 
     .product_DescriptionLand .EneryStar {
-        display: block;
+        display: inline;
         position: relative;
         top: -63px;
         left: -1px;
@@ -75,11 +76,11 @@
     }
 
     .product_DescriptionLand .Price {
-        display: block;
+        display: inline;
     }
 
     .product_DescriptionLand .Offer {
-        display: block;
+        display: inline;
         position: relative;
         top: -190px;
         left: -210px;
@@ -93,12 +94,12 @@
     }
 
     .product_DescriptionLand .Specification {
-        display: block;
+        display: inline;
         margin-top: 5px;
     }
 
         .product_DescriptionLand .Specification ul {
-            display: block;
+            display: inline;
             margin-left: -40px;
             list-style: none;
         }
@@ -113,7 +114,7 @@
             }
 
     .product_DescriptionLand .Description {
-        display: block;
+        display: inline;
     }
 
 .Overlap {
@@ -124,12 +125,12 @@
     width: 300px;
     -webkit-transition: opacity 1s linear 0.1s;
     -o-transition: opacity 1s linear 0.1s;
+    -moz-transition: opacity 1s linear 0.1s;
     transition: opacity 1s linear 0.1s;
     border-radius: 10px;
 }
 
     .Overlap:hover {
-        -webkit-opacity: 0.9;
         opacity: 0.9;
         z-index: 3;
         border-radius: 10px;
@@ -145,6 +146,31 @@
     }
 
 .pagination-container {
-    clear:both;
-    text-align:center;
+    clear: both;
+    text-align: center;
 }
+
+.PriceHolderLand {    
+    border-radius: 50%;
+    background-color: #fed0d0;
+    position: relative;
+    bottom: -60px;
+    left: -30px;
+    float: left;
+    width: 70px;
+    height: 70px;
+    -webkit-box-shadow: -2px 1px 6px #F53F42;
+    box-shadow: -2px 1px 6px #F53F42;
+    z-index: 3;
+    opacity:0.85;
+}
+
+    .PriceHolderLand .Text {
+        position: relative;
+        text-align: right;
+        color: #2940f5;
+        font-size: medium;
+        top: 25px;
+        left: 5px;
+        text-shadow: 1px 1px 1px #b2fefe;
+    }
