--- a/Sivas/Content/customProduct.css
+++ b/Sivas/Content/customProduct.css
@@ -1,32 +1,7 @@
-.ProductContainer {
+﻿.ProductContainer {
     color: #808080;
     margin-left: -30px;
 }
-
-.PriceHolder {
-    border-radius: 50%;
-    background-color: #fed0d0;
-    float: left;
-    position: relative;
-    top: -55px;
-    left: -15px;
-    clear: both;
-    width: 70px;
-    height: 70px;
-    -webkit-box-shadow: -2px 1px 6px #F53F42;
-    box-shadow: -2px 1px 6px #F53F42;
-    z-index: 3;
-}
-
-    .PriceHolder .Text {
-        position: relative;
-        text-align: right;
-        color: #2940f5;
-        font-size: medium;
-        top: 25px;
-        left: 5px;
-        text-shadow: 1px 1px 1px #b2fefe;
-    }
 
 .product {
     background-color: rgb(255, 250, 250);
@@ -71,13 +46,13 @@
     width: 300px;
     -webkit-transition: opacity 1s linear 0.1s;
     -o-transition: opacity 1s linear 0.1s;
+    -moz-transition: opacity 1s linear 0.1s;
     transition: opacity 1s linear 0.1s;
     border-radius: 10px;
     z-index: 3;
 }
 
     .Overlap:hover {
-        -webkit-opacity: 0.9;
         opacity: 0.9;
         border-radius: 10px;
         z-index: 3;
