--- a/Sivas/Views/Home/Index.cshtml
+++ b/Sivas/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Home Page";
 }
 
-@section styles{    
+@section styles{
     <link href="~/Content/customLand.css" rel="stylesheet" />
     <link href="~/Content/customPort.css" rel="stylesheet" />
 }
@@ -26,8 +26,96 @@
                 }
                 <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" />
             </div>
-            <div class="product_Title">@item.Category </div>
+            <div @(item.Landscape == true ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
+                <span class="product_Title">@item.Category </span>
+                <span class="Company">@item.Company + " " + @item.Brand </span>
+                <span class="EneryStar">
+                    @{
+                        if (item.Landscape)
+                        {
+                            if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Five)
+                            {
+                                <img src="~/image/EnergyStarLand/FiveStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Four)
+                            {
+                                <img src="~/image/EnergyStarLand/FourStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Three)
+                            {
+                                <img src="~/image/EnergyStarLand/ThreeStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Two)
+                            {
+                                <img src="~/image/EnergyStarLand/TwoStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.One)
+                            {
+                                <img src="~/image/EnergyStarLand/OneStar.png" />
+                            }
+                        }
+                        else
+                        {
+                            if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Five)
+                            {
+                                <img src="~/image/EnergyStarPort/FiveStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Four)
+                            {
+                                <img src="~/image/EnergyStarPort/FourStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Three)
+                            {
+                                <img src="~/image/EnergyStarPort/ThreeStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Two)
+                            {
+                                <img src="~/image/EnergyStarPort/TwoStar.png" />
+                            }
+                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.One)
+                            {
+                                <img src="~/image/EnergyStarPort/OneStar.png" />
+                            }
+                        }
+                    }
+                </span>
+                @{
+                    if (item.Offer)
+                    {
+                        if (item.Landscape)
+                        {
+                            <span class="Offer">
+                                <img src="~/image/EnergyStarLand/Offer.png" />
+                            </span>
+                        }
+                        else
+                        {
+                            <span class="Offer">
+                                <img src="~/image/EnergyStarPort/Offer.png" />
+                            </span>
+                        }
+                    }
+                }
+                <span class="Color">@Html.DisplayFor(model => item.Color)</span>
+                <span class="Specification">
+                    @{
+                        var displaySpecification = "<ul><li>";
+                        if (item.Specification.Contains("~"))
+                        {
+                            displaySpecification += item.Specification.Replace("~", "</li><li>");
+                        }
+                        else
+                        {
+                            displaySpecification += item.Specification;
+                        }
+                        displaySpecification += "</li></ul>";
+                        item.Specification = displaySpecification;
+                    }
+                    @Html.Raw(Server.HtmlDecode(item.Specification))
+                </span>
+                <span class="Description">@Html.DisplayFor(model => item.Description)</span>
+            </div>
             <div @(item.Landscape == true ? "class=PriceHolderLand" : "class=PriceHolderPort")><span class="Text">@item.Price</span></div>
         </div>
-                    }
+                        }
 </div>
