--- a/Sivas/Content/customPort.css
+++ b/Sivas/Content/customPort.css
@@ -164,8 +164,9 @@
     border-radius: 50%;
     background-color: #fed0d0;
     position: relative;
-    bottom: 0;
-    left: -30px;
+    top: -100px;
+    left: -260px;
+    float: right;
     clear: both;
     width: 70px;
     height: 70px;
@@ -177,10 +178,9 @@
 
     .PriceHolderPort .Text {
         position: relative;
-        text-align: right;
-        color: #2940f5;
-        font-size: medium;
         top: 25px;
         left: 5px;
+        color: #2940f5;
+        font-size: medium;
         text-shadow: 1px 1px 1px #b2fefe;
     }
