--- a/Sivas/Content/customProduct.css
+++ b/Sivas/Content/customProduct.css
@@ -4,16 +4,16 @@
 }
 
 .product {
-    background-color: rgb(255, 250, 250);
+    background-color: #fffafa;
     margin-top: 10px;
-    margin-bottom: 40px; 
-    margin-left:40px;   
-    margin-right:40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
     float: left;
     height: 240px;
     width: 300px;
-    -webkit-box-shadow: 2px 2px 4px 2px #2D2D2D;
-    box-shadow: 2px 2px 4px 2px #2D2D2D;
+    -webkit-box-shadow: 2px 2px 4px 2px #2d2d2d;
+    box-shadow: 2px 2px 4px 2px #2d2d2d;
     border-radius: 10px;
 }
 
@@ -33,7 +33,7 @@
 
 .product_Title {
     display: compact;
-    color: #2D2D2D;
+    color: #2d2d2d;
     text-align: center;
     font-size: x-large;
     margin-top: 5px;
@@ -42,25 +42,25 @@
 .Overlap {
     position: absolute;
     opacity: 0;
-    background-color: #F53F42;
+    background-color: #f53f42;
     height: 240px;
     width: 300px;
-    -webkit-transition: opacity 1s linear 0.1s;
-    -o-transition: opacity 1s linear 0.1s;
-    -moz-transition: opacity 1s linear 0.1s;
-    transition: opacity 1s linear 0.1s;
+    -webkit-transition: opacity 1s linear .1s;
+    -o-transition: opacity 1s linear .1s;
+    -moz-transition: opacity 1s linear .1s;
+    transition: opacity 1s linear .1s;
     border-radius: 10px;
     z-index: 3;
 }
 
     .Overlap:hover {
-        opacity: 0.9;
+        opacity: .9;
         border-radius: 10px;
         z-index: 3;
     }
 
     .Overlap .Text {
-        color: #ffffff;
+        color: #fff;
         display: block;
         text-align: center;
         font-size: x-large;
