--- a/Sivas/Content/customPort.css
+++ b/Sivas/Content/customPort.css
@@ -15,6 +15,7 @@
     -webkit-box-shadow: 2px 2px 4px 2px #2D2D2D;
     box-shadow: 2px 2px 4px 2px #2D2D2D;
     border-radius: 10px;
+    overflow: hidden;
 }
 
     .product:hover {
@@ -164,8 +165,8 @@
     border-radius: 50%;
     background-color: #fed0d0;
     position: relative;
-    top: -100px;
-    left: -260px;
+    top: -110px;
+    left: -230px;
     float: right;
     clear: both;
     width: 70px;
@@ -173,7 +174,7 @@
     -webkit-box-shadow: -2px 1px 6px #F53F42;
     box-shadow: -2px 1px 6px #F53F42;
     z-index: 3;
-    opacity: 0.85;
+    opacity: 0.7;
 }
 
     .PriceHolderPort .Text {
