--- a/Sivas/Views/Shared/_Layout.cshtml
+++ b/Sivas/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr style="clear:left" />
-        <footer>
+        <footer style="text-align:center;background-color:rgba(0,0,0,0.2);position:fixed;bottom:0px;width:85%;z-index:10;">
             <p>&copy; @DateTime.Now.Year - Designed by <a href="http://himalayatechnology.in" target="_blank">Himalaya Computer Technology </a> </p>
         </footer>
     </div>
