--- a/Sivas/Views/Home/About.cshtml
+++ b/Sivas/Views/Home/About.cshtml
@@ -5,19 +5,20 @@
     <style>
         .about-us {
             align-content: center;
-            text-shadow: 0 0 2.8px rgb(161, 152, 1);
-            color: rgb(212, 197, 32);
+            text-shadow: 0 0 1px rgb(161, 152, 1);
+            color: rgb(255, 242, 102);
         }
 
         .motto {
             align-content: center;
-            text-shadow: 0 0 2px rgb(79, 0, 0);
+            text-shadow: 0 0 1px rgb(207, 57, 68);
             color: rgb(255, 64, 78);
         }
     </style>
 }
 
 @*  Placing SivaS Logo Animation here *@
+<img src="~/image/Logo_English.jpg" alt="Sivas Logo" width="256" height="256" style="display:block; margin-left: auto;margin-right: auto" />
 
 <h2 class="about-us">@ViewBag.Message</h2>
 <p>A concern of leading group in Tamilnadu involved in manufacturing and distribution of various products. Founded in 2001 and having number of show rooms in Tamilnadu.</p>
