--- a/Sivas/Content/customLand.css
+++ b/Sivas/Content/customLand.css
@@ -7,7 +7,7 @@
 .product {
     background-color: rgb(255, 250, 250);
     margin: 10px;
-    margin-left: 40px;
+    margin-left: 20px;
     float: left;
     height: 240px;
     width: 300px;
@@ -38,18 +38,21 @@
 }
 
     .product_DescriptionLand .Category {
+        text-shadow: 0 0 1px rgb(234, 20, 20);
         font-size: larger;
         text-align: center;
         display: inline;
     }
 
     .product_DescriptionLand .Company {
+        text-shadow: 0 0 1px rgb(11, 117, 219);
         font-size: larger;
         text-align: center;
         display: inline;
     }
 
     .product_DescriptionLand .Brand {
+        text-shadow: 0 0 1px rgb(52, 226, 19);
         font-size: larger;
         text-align: center;
         display: inline;
@@ -57,6 +60,7 @@
 
     .product_DescriptionLand .Model {
         display: inline;
+        text-shadow: 0 0 1px rgb(226, 217, 24);
     }
 
     .product_DescriptionLand .Image {
@@ -78,6 +82,7 @@
 
     .product_DescriptionLand .Price {
         display: inline;
+        text-shadow: 0 0 1px rgb(225, 17, 195);
     }
 
     .product_DescriptionLand .Offer {
@@ -92,10 +97,12 @@
 
     .product_DescriptionLand .Color {
         display: inline;
+         text-shadow: 0 0 1px rgb(18, 235, 231);
     }
 
     .product_DescriptionLand .Specification {
         display: inline;
+        text-shadow: 0 0 1px rgb(230, 20, 78);
     }
 
         .product_DescriptionLand .Specification ul {
@@ -115,6 +122,7 @@
 
     .product_DescriptionLand .Description {
         display: inline;
+        text-shadow: 0 0 1px rgb(195, 79, 234);
     }
 
 .Overlap {
