--- a/Sivas/Content/customProduct.css
+++ b/Sivas/Content/customProduct.css
@@ -7,7 +7,7 @@
     background-color: #fffafa;
     margin-top: 10px;
     margin-bottom: 40px;
-    margin-left: 40px;
+    margin-left: 20px;
     margin-right: 40px;
     float: left;
     height: 240px;
@@ -33,7 +33,8 @@
 
 .product_Title {
     display: compact;
-    color: #2d2d2d;
+    color: #63ca51;
+    text-shadow: 0 0 1px #5f5f5f;
     text-align: center;
     font-size: x-large;
     margin-top: 5px;
