--- a/Sivas/Views/Shared/_Layout.cshtml
+++ b/Sivas/Views/Shared/_Layout.cshtml
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="The wholesaler of home appliances">
+    <meta name="Keywords" content="sivas, wholesales, wholesale, himalaya computer technology, home, appliances,appliance, fridge, ac, wachine machine, home product, kannan, kannan c,sivas home appliances">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @RenderSection("styles", false)
