--- a/Sivas/Views/Products/Category.cshtml
+++ b/Sivas/Views/Products/Category.cshtml
@@ -17,7 +17,7 @@
     }
 </script>
 
-<div class="ProductContainer">
+<div class="ProductContainer" itemscope itemtype="http://schema.org/Product">
     @foreach (var item in Model)
     {
         <div class="product" @("onclick=GoToRoom('" + item.Id + "')")>
@@ -26,13 +26,13 @@
                 @{
                     var message = item.Category + " " + item.Model;
                 }
-                <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" />
+                <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" itemprop="image" />
             </div>
             <div @(item.Landscape == true ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
                 @*<span class="Category">@Html.DisplayFor(model => item.Category)</span>*@
                 <span class="Company">@Html.DisplayFor(model => item.Company)</span>
+                <span class="Model" itemprop="name">@Html.DisplayFor(model => item.Model)</span>
                 <span class="Brand">@Html.DisplayFor(model => item.Brand)</span>
-                <span class="Model">@Html.DisplayFor(model => item.Model)</span>
                 @*<span class="Image">@Html.DisplayFor(model => item.Image)</span>*@
                 @*<span class="Landscape">@Html.DisplayFor(model => item.Landscape)</span>*@
                 @*<span class="EneryStar">@Html.DisplayFor(model => item.EnergyStar)</span>*@
@@ -86,7 +86,9 @@
                         }
                     }
                 </span>
-                <span class="Price">@Html.DisplayFor(model => item.Price)</span>
+                <span itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                    <span class="Price" itemprop="price">@Html.DisplayFor(model => item.Price)</span>
+                </span>
                 @{
                     if (item.Offer)
                     {
@@ -122,7 +124,7 @@
                     }
                     @Html.Raw(Server.HtmlDecode(item.Specification))
                 </span>
-                <span class="Description">@Html.DisplayFor(model => item.Description)</span>
+                <span class="Description" itemprop="description">@Html.DisplayFor(model => item.Description)</span>
             </div>
         </div>
                         }
