--- a/Sivas/Views/Shared/_Layout.cshtml
+++ b/Sivas/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="The wholesaler of home appliances">
-    <meta name="Keywords" content="sivas, wholesales, wholesale, himalaya computer technology, home, appliances,appliance, fridge, ac, wachine machine, home product, kannan, kannan c,sivas home appliances">
+    <meta name="Keywords" content="sivas,tirunelveli wholesales, tirunelveli home appliances, sivas wholesale, sivas wholesalers, wholesalers, sivas home appliances, very low price, cheap offer, 2500, smart offer, easy buy, quick buy, wholesales, wholesale, himalaya computer technology, home, appliances,appliance, fridge, ac, wachine machine, home product,home products, kannan, kannan c,sivas home appliances">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @RenderSection("styles", false)
