--- a/Sivas/Views/Products/Category.cshtml
+++ b/Sivas/Views/Products/Category.cshtml
@@ -26,7 +26,7 @@
                 @{
                     var message = item.Category + " " + item.Model;
                 }
-                <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" itemprop="image" />
+                <img @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" itemprop="image" src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" />
             </div>
             <div @(item.Landscape == true ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
                 @*<span class="Category">@Html.DisplayFor(model => item.Category)</span>*@
