--- a/Sivas/Views/Products/Details.cshtml
+++ b/Sivas/Views/Products/Details.cshtml
@@ -94,6 +94,7 @@
             if (HttpContext.Current.User.Identity.IsAuthenticated)
             {
                 <h2>@Html.ActionLink("Edit Current Item", "Edit", new { id = Model.Id })</h2>
+                <h2>@Html.ActionLink("Delete Current Item", "Delete", new { id = Model.Id })</h2>
             }
         }
         @Html.ActionLink("Back to List", "Index")
