--- a/Sivas/Views/Products/Category.cshtml
+++ b/Sivas/Views/Products/Category.cshtml
@@ -1,10 +1,11 @@
-﻿@using PagedList.Mvc;
-@using PagedList;
-
-@model IPagedList<Sivas.Models.Products>
+﻿@using PagedList.Mvc
+@using Sivas.Extension
+@model PagedList.IPagedList<Sivas.Models.Products>
 
 @{
     ViewBag.Title = "Category";
+    const string imageRoot = "~/image";
+    const string imageExtension = ".png";
 }
 
 @section styles{
@@ -20,15 +21,21 @@
 <div class="ProductContainer" itemscope itemtype="http://schema.org/Product">
     @foreach (var item in Model)
     {
+        var imageFolder = item.Landscape switch
+        {
+            true => "EnergyStarLand",
+            false => "EnergyStarPort"
+        };
+
         <div class="product" @("onclick=GoToRoom('" + item.Id + "')")>
             <div class="Overlap"><span class="Text">More Details</span></div>
-            <div @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort")>
+            <div @(item.Landscape ? "class=product_ImageLand" : "class=product_ImagePort")>
                 @{
                     var message = item.Category + " " + item.Model;
                 }
-                <img @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" itemprop="image" src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" />
+                <img @(item.Landscape ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" itemprop="image" src="@($"data:image/gif;base64,{Convert.ToBase64String(item.Image)}")" />
             </div>
-            <div @(item.Landscape == true ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
+            <div @(item.Landscape ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
                 @*<span class="Category">@Html.DisplayFor(model => item.Category)</span>*@
                 <span class="Company">@Html.DisplayFor(model => item.Company)</span>
                 <span class="Model" itemprop="name">@Html.DisplayFor(model => item.Model)</span>
@@ -38,51 +45,10 @@
                 @*<span class="EneryStar">@Html.DisplayFor(model => item.EnergyStar)</span>*@
                 <span class="EneryStar">
                     @{
-                        if (item.Landscape)
+                        var productStar = item.EnergyStar.GetEnergyStar();
+                        if (productStar != "")
                         {
-                            if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Five)
-                            {
-                                <img src="~/image/EnergyStarLand/FiveStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Four)
-                            {
-                                <img src="~/image/EnergyStarLand/FourStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Three)
-                            {
-                                <img src="~/image/EnergyStarLand/ThreeStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Two)
-                            {
-                                <img src="~/image/EnergyStarLand/TwoStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.One)
-                            {
-                                <img src="~/image/EnergyStarLand/OneStar.png" />
-                            }
-                        }
-                        else
-                        {
-                            if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Five)
-                            {
-                                <img src="~/image/EnergyStarPort/FiveStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Four)
-                            {
-                                <img src="~/image/EnergyStarPort/FourStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Three)
-                            {
-                                <img src="~/image/EnergyStarPort/ThreeStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Two)
-                            {
-                                <img src="~/image/EnergyStarPort/TwoStar.png" />
-                            }
-                            else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.One)
-                            {
-                                <img src="~/image/EnergyStarPort/OneStar.png" />
-                            }
+                            <img src="@($"{imageRoot}/{imageFolder}/{productStar}{imageExtension}")" alt="" />
                         }
                     }
                 </span>
@@ -92,18 +58,9 @@
                 @{
                     if (item.Offer)
                     {
-                        if (item.Landscape)
-                        {
-                            <span class="Offer">
-                                <img src="~/image/EnergyStarLand/Offer.png" />
-                            </span>
-                        }
-                        else
-                        {
-                            <span class="Offer">
-                                <img src="~/image/EnergyStarPort/Offer.png" />
-                            </span>
-                        }
+                        <span class="Offer">
+                            <img src="@($"{imageRoot}/{imageFolder}/Offer.png")" alt="" />
+                        </span>
                     }
                 }
 
@@ -127,6 +84,6 @@
                 <span class="Description" itemprop="description">@Html.DisplayFor(model => item.Description)</span>
             </div>
         </div>
-                        }
+    }
 </div>
 @Html.PagedListPager(Model, page => Url.Action("Category", new { page, category = Request.QueryString["category"] }), new PagedListRenderOptions { Display = PagedListDisplayMode.IfNeeded })
