--- a/Sivas/Views/Products/Delete.cshtml
+++ b/Sivas/Views/Products/Delete.cshtml
@@ -109,7 +109,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
