--- a/Sivas/Views/Home/About.cshtml
+++ b/Sivas/Views/Home/About.cshtml
@@ -21,6 +21,6 @@
 <img src="~/image/Logo_English.jpg" alt="Sivas Logo" width="256" height="256" style="display:block; margin-left: auto;margin-right: auto" />
 
 <h2 class="about-us">@ViewBag.Message</h2>
-<p>A concern of leading group in Tamil Nadu involved in manufacturing and distribution of various products. Founded in 2001 and having number of showrooms in Tamil Nadu.</p>
+<p>A concern of leading group in Tamilnadu involved in manufacturing and distribution of various products. Founded in 2001 and having number of showrooms in Tamilnadu.</p>
 <h4 class="motto">The Motto is too low Margin High volume</h4>
 <p>Having an own manufacturing unit for wooden furniture we can serve you per year equipment.</p>
