--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -41,7 +41,7 @@
         <div class="product_Title">Cooler </div>
     </div>
     <div class="product">
-        <div class="Overlap" @("onclick=GoToRoom('" + ProductCategory.Woodern + "')")><span class="Text">Browse</span></div>
+        <div class="Overlap" @("onclick=GoToRoom('" + ProductCategory.Wooden + "')")><span class="Text">Browse</span></div>
         <div class="product_Image"> <img src="~/image/Products/Woodern.png" class="product_Image" /> </div>
         <div class="product_Title">Woodern </div>
     </div>
